@@ -15,7 +15,8 @@ import java.util.Collections;
 import java.util.List;
 
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.CourtSession.MORNING;
-import static uk.gov.justice.probation.courtcaseservice.jpa.entity.SourceType.COMMON_PLATFORM;
+import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.DEFENDANT_ID;
+import static uk.gov.justice.probation.courtcaseservice.jpa.entity.EntityHelper.HEARING_ID;
 import static uk.gov.justice.probation.courtcaseservice.jpa.entity.SourceType.LIBRA;
 
 class CaseProgressHearingTest {
@@ -25,12 +26,7 @@ class CaseProgressHearingTest {
         var hearingDayEntity1 = EntityHelper.aHearingDayEntity(LocalDateTime.of(2022, 2, 26, 9, 0)).withCourtRoom("Room 1").withCourt(CourtEntity.builder().name("Leeds mags court").build());
         var hearingDayEntity2 = EntityHelper.aHearingDayEntity(LocalDateTime.of(2022, 5, 5, 9, 0)).withCourtRoom("Room 2").withCourt(CourtEntity.builder().name("Sheffield mags court").build());
 
-        var hearingEntity = HearingEntity.builder()
-            .hearingId("test-hearing-id")
-            .hearingType("Sentence")
-            .courtCase(CourtCaseEntity.builder().sourceType(COMMON_PLATFORM).build())
-            .hearingDays(List.of(hearingDayEntity2, hearingDayEntity1))
-            .build();
+        var hearingEntity = EntityHelper.aHearingEntity().withHearingDays(List.of(hearingDayEntity1, hearingDayEntity2)).withHearingType("Sentence");
 
         var hearingNotes = List.of(
                 HearingNoteEntity.builder().note("Note one").build(),
@@ -38,14 +34,14 @@ class CaseProgressHearingTest {
                 HearingNoteEntity.builder().note("This delete note should note be mapped in response").deleted(true).build()
         );
 
-        Assertions.assertThat(CaseProgressHearing.of(hearingEntity, hearingNotes)).isEqualTo(
+        Assertions.assertThat(CaseProgressHearing.of(hearingEntity, DEFENDANT_ID, hearingNotes)).isEqualTo(
             CaseProgressHearing.builder().
             hearingDateTime(LocalDateTime.of(2022, 2, 26, 9, 0))
                 .court("Leeds mags court")
                 .courtRoom("Room 1")
                 .hearingTypeLabel("Sentence")
                 .session(MORNING.name())
-                .hearingId("test-hearing-id")
+                .hearingId(HEARING_ID)
                 .notes(
                     List.of(HearingNoteResponse.builder().note("Note one").build(), HearingNoteResponse.builder().note("Note two").build())
                 )
@@ -66,6 +62,7 @@ class CaseProgressHearingTest {
             .listNo("1st")
             .courtCase(CourtCaseEntity.builder().sourceType(LIBRA).build())
             .hearingDays(List.of(hearingDayEntity2, hearingDayEntity1))
+            .hearingDefendants(List.of(EntityHelper.aHearingDefendantEntity()))
             .build();
 
         var hearingNotes = List.of(
@@ -73,7 +70,7 @@ class CaseProgressHearingTest {
                 HearingNoteEntity.builder().note("Note two").build()
             );
 
-        Assertions.assertThat(CaseProgressHearing.of(hearingEntity, hearingNotes)).isEqualTo(
+        Assertions.assertThat(CaseProgressHearing.of(hearingEntity, DEFENDANT_ID, hearingNotes)).isEqualTo(
             CaseProgressHearing.builder().
             hearingDateTime(LocalDateTime.of(2022, 2, 26, 9, 0))
                 .court("Leeds mags court")
@@ -91,33 +88,22 @@ class CaseProgressHearingTest {
     @Test
     void givenLibraCase_shouldMapEmptyHearingTypeToDefaultText() {
         var hearingDayEntity1 = EntityHelper.aHearingDayEntity(LocalDateTime.of(2022, 2, 26, 9, 0))
-                                                    .withCourtRoom("Room 1").withCourt(CourtEntity.builder().name("Leeds mags court").build());
+                                                    .withCourtRoom("Room 1").withCourt(CourtEntity.builder().name("Leeds Mags").name("Leeds mags court").build());
 
-        var hearingEntity = HearingEntity.builder()
-            .hearingId("test-hearing-id")
-            .hearingType("Sentence")
-            .listNo(null)
-            .courtCase(CourtCaseEntity.builder().sourceType(LIBRA).build())
-            .hearingDays(List.of(hearingDayEntity1))
-            .build();
+        var hearingEntity = EntityHelper.aHearingEntity().withHearingType(null)
+            .withHearingDays(List.of(hearingDayEntity1));
 
-        CaseProgressHearing caseProgressHearing = CaseProgressHearing.of(hearingEntity, Collections.emptyList());
+        CaseProgressHearing caseProgressHearing = CaseProgressHearing.of(hearingEntity, DEFENDANT_ID, Collections.emptyList());
         Assertions.assertThat(caseProgressHearing.getHearingTypeLabel()).isEqualTo("Hearing type unknown");
     }
 
     @Test
     void givenCommonPlatformCase_shouldMapEmptyHearingTypeToDefaultText() {
-        var hearingDayEntity1 = EntityHelper.aHearingDayEntity(LocalDateTime.of(2022, 2, 26, 9, 0))
-                                                    .withCourtRoom("Room 1").withCourt(CourtEntity.builder().name("Leeds mags court").build());
+        var hearingEntity = EntityHelper.aHearingEntity().withHearingType(null).withHearingDays(
+            List.of(EntityHelper.aHearingDayEntity(LocalDateTime.of(2022, 2, 26, 9, 0))
+                .withCourtRoom("Room 1").withCourt(CourtEntity.builder().name("Leeds Mags").name("Leeds mags court").build())));
 
-        var hearingEntity = HearingEntity.builder()
-            .hearingId("test-hearing-id")
-            .hearingType(null)
-            .courtCase(CourtCaseEntity.builder().sourceType(COMMON_PLATFORM).build())
-            .hearingDays(List.of(hearingDayEntity1))
-            .build();
-
-        CaseProgressHearing caseProgressHearing = CaseProgressHearing.of(hearingEntity, Collections.emptyList());
+        CaseProgressHearing caseProgressHearing = CaseProgressHearing.of(hearingEntity, DEFENDANT_ID, Collections.emptyList());
         Assertions.assertThat(caseProgressHearing.getHearingTypeLabel()).isEqualTo("Hearing type unknown");
     }
 
